[gd_scene load_steps=11 format=3 uid="uid://1uvg5mnu5p6a"]

[ext_resource type="Texture2D" uid="uid://cmxughgxdma3o" path="res://assets/folded_paper.jpg" id="1_bufcv"]
[ext_resource type="Script" path="res://map_scene.gd" id="1_w4d8i"]
[ext_resource type="Texture2D" uid="uid://cahtf1jqffufe" path="res://assets/portraits/small/character_portrait_small.png" id="2_btead"]
[ext_resource type="Script" path="res://MapPawn.gd" id="3_knjbm"]
[ext_resource type="Texture2D" uid="uid://drh26vaqmng8n" path="res://assets/map_objects/POI1.png" id="3_sti20"]
[ext_resource type="Script" path="res://mapPOI.gd" id="6_1dkrl"]
[ext_resource type="FontFile" uid="uid://d3orine1p7k7d" path="res://fonts/OLDSH___.TTF" id="7_4dq0f"]
[ext_resource type="PackedScene" uid="uid://060rnm2tqbqh" path="res://multiLineDrawer.tscn" id="8_b7dn0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3a74q"]
radius = 36.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iw8jb"]
size = Vector2(217, 200)

[node name="Map" type="Node2D" node_paths=PackedStringArray("movablePawn", "drawer", "pois")]
script = ExtResource("1_w4d8i")
movablePawn = NodePath("MovableThing")
drawer = NodePath("MultiLineDrawer")
pois = [NodePath("mapPOI")]

[node name="BackGround" type="Sprite2D" parent="."]
position = Vector2(638, 392)
scale = Vector2(0.861739, 0.861739)
texture = ExtResource("1_bufcv")

[node name="MultiLineDrawer" parent="." node_paths=PackedStringArray("lines") instance=ExtResource("8_b7dn0")]
lines = [null, null]

[node name="MovableThing" type="TextureRect" parent="."]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 608.0
offset_top = 366.0
offset_right = 673.016
offset_bottom = 430.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_btead")
expand_mode = 3
stretch_mode = 5
script = ExtResource("3_knjbm")
bakeDistance = 3.0

[node name="Outline" type="TextureRect" parent="MovableThing"]
self_modulate = Color(0, 0, 0, 1)
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5079
offset_top = -35.0
offset_right = 34.6032
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_btead")
expand_mode = 3
stretch_mode = 5

[node name="Collision" type="Area2D" parent="MovableThing"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovableThing/Collision"]
position = Vector2(32, 32)
shape = SubResource("CircleShape2D_3a74q")

[node name="mapPOI" type="TextureRect" parent="." node_paths=PackedStringArray("collisionArea", "infoLineLabelProto")]
offset_left = 163.0
offset_top = 124.0
offset_right = 367.385
offset_bottom = 312.0
mouse_filter = 2
texture = ExtResource("3_sti20")
expand_mode = 3
stretch_mode = 5
script = ExtResource("6_1dkrl")
collisionArea = NodePath("poiCollision")
infoThreshold = 100.0
infoLines = Array[String](["THis is the closest line", "This is the second line", "This is the farthest line"])
infoLineLabelProto = NodePath("InfoLines/Lines/SingleLine")

[node name="poiCollision" type="Area2D" parent="mapPOI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="mapPOI/poiCollision"]
position = Vector2(98.5, 90)
shape = SubResource("RectangleShape2D_iw8jb")

[node name="InfoLines" type="Node2D" parent="mapPOI"]
position = Vector2(216, -9)
metadata/_edit_group_ = true

[node name="Lines" type="VBoxContainer" parent="mapPOI/InfoLines"]
offset_right = 40.0
offset_bottom = 40.0

[node name="SingleLine" type="Label" parent="mapPOI/InfoLines/Lines"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_4dq0f")
theme_override_font_sizes/font_size = 16
text = "This is an ominous looking place"

[connection signal="mouse_entered" from="MovableThing/Collision" to="MovableThing" method="maskMouseEntered"]
[connection signal="mouse_exited" from="MovableThing/Collision" to="MovableThing" method="maskMouseExited"]
[connection signal="area_entered" from="mapPOI/poiCollision" to="mapPOI" method="_on_poi_collision_area_entered"]
